# unleash-datagenerator

./: CHANGELOG.md  CLI.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: main.rs
