[package]
name = "datagenerator"
version = "0.1.0"
edition = "2021"
description = "Generates features and strategies for https://github.com/Unleash/unleash"
authors = ["Christopher Kolstad <chriswk@getunleash.io>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["env", "derive"] }
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["rt", "macros", "rt-multi-thread"] }
ulid = "1.0.0"
